Add plan builder to simplify tests. Add first support for attribute value matchers.

--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -8,6 +8,9 @@ AllCops:
 Layout/LineLength:
   Max: 80
 
+Layout/MultilineMethodCallIndentation:
+  EnforcedStyle: indented_relative_to_receiver
+
 Metrics/BlockLength:
   IgnoredMethods:
     - describe
