Begin adding `failure_message` implementation for `include_output_change`.

--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -12,7 +12,7 @@ Layout/MultilineMethodCallIndentation:
   EnforcedStyle: indented_relative_to_receiver
 
 Metrics/BlockLength:
-  IgnoredMethods:
+  AllowedMethods:
     - describe
     - context
     - shared_examples
